--- a/_posts/2018-01-20-windows.md
+++ b/_posts/2018-01-20-windows.md
@@ -31,8 +31,8 @@ categories:  Windows Anyconnect
 
 >de.fanq.in（德国/Germany）
 
-<!-- >es.fanq.in（西班牙/Spain）
- -->
+>es.fanq.in（西班牙/Spain）
+
 >fr.fanq.in（法国/France）
 
 >hk.fanq.in（香港/HongKong）
@@ -47,18 +47,21 @@ categories:  Windows Anyconnect
 
 >nl.fanq.in（荷兰/Holland）
 
+>pt.fanq.in（葡萄牙/Portugal）
+
 <!-- >pl.fanq.in（波兰/Poland）
  -->
 >ru.fanq.in（俄罗斯/Russia）
 
 >sg.fanq.in（新加坡/Singapore）
-<!-- 
->tu.fanq.in（土耳其/Turkey） -->
 
+<!-- >tu.fanq.in（土耳其/Turkey）
+ -->
 >tw.fanq.in（台湾/Taiwan）
 
 >uk.fanq.in（英国/United Kingdom）
 
 >us.fanq.in（美国/United States）
+
 
 ****
