--- a/_posts/2018-02-20-mac_txt.md
+++ b/_posts/2018-02-20-mac_txt.md
@@ -34,8 +34,8 @@ categories:  Mac Anyconnect
 
 >de.fanq.in（德国/Germany）
 
-<!-- >es.fanq.in（西班牙/Spain）
- -->
+>es.fanq.in（西班牙/Spain）
+
 >fr.fanq.in（法国/France）
 
 >hk.fanq.in（香港/HongKong）
@@ -49,6 +49,8 @@ categories:  Mac Anyconnect
 >jp.fanq.in（日本/Japan）
 
 >nl.fanq.in（荷兰/Holland）
+
+>pt.fanq.in（葡萄牙/Portugal）
 
 <!-- >pl.fanq.in（波兰/Poland）
  -->
