--- a/_posts/2018-03-19-ios.md
+++ b/_posts/2018-03-19-ios.md
@@ -38,8 +38,8 @@ categories:  IOS Anyconnect
 
 >de.fanq.in（德国/Germany）
 
-<!-- >es.fanq.in（西班牙/Spain）
- -->
+>es.fanq.in（西班牙/Spain）
+
 >fr.fanq.in（法国/France）
 
 >hk.fanq.in（香港/HongKong）
@@ -53,6 +53,8 @@ categories:  IOS Anyconnect
 >jp.fanq.in（日本/Japan）
 
 >nl.fanq.in（荷兰/Holland）
+
+>pt.fanq.in（葡萄牙/Portugal）
 
 <!-- >pl.fanq.in（波兰/Poland）
  -->
