--- a/_posts/2018-03-19-ios_txt.md
+++ b/_posts/2018-03-19-ios_txt.md
@@ -44,8 +44,8 @@ categories:  IOS Anyconnect
 
 >de.fanq.in（德国/Germany）
 
-<!-- >es.fanq.in（西班牙/Spain）
- -->
+>es.fanq.in（西班牙/Spain）
+
 >fr.fanq.in（法国/France）
 
 >hk.fanq.in（香港/HongKong）
@@ -59,6 +59,8 @@ categories:  IOS Anyconnect
 >jp.fanq.in（日本/Japan）
 
 >nl.fanq.in（荷兰/Holland）
+
+>pt.fanq.in（葡萄牙/Portugal）
 
 <!-- >pl.fanq.in（波兰/Poland）
  -->
