--- a/_posts/2018-03-20-ubuntu.md
+++ b/_posts/2018-03-20-ubuntu.md
@@ -30,8 +30,8 @@ sudo apt install network-manager-openconnect-gnome
 
 >de.fanq.in（德国/Germany）
 
-<!-- >es.fanq.in（西班牙/Spain）
- -->
+>es.fanq.in（西班牙/Spain）
+
 >fr.fanq.in（法国/France）
 
 >hk.fanq.in（香港/HongKong）
@@ -45,6 +45,8 @@ sudo apt install network-manager-openconnect-gnome
 >jp.fanq.in（日本/Japan）
 
 >nl.fanq.in（荷兰/Holland）
+
+>pt.fanq.in（葡萄牙/Portugal）
 
 <!-- >pl.fanq.in（波兰/Poland）
  -->
