--- a/_posts/2018-01-20-windows.md
+++ b/_posts/2018-01-20-windows.md
@@ -15,9 +15,9 @@ categories:  Windows Anyconnect
 ****
 ### 软件下载
 
->[Win 10,8,7 版下载](/files/win10.msi)
+>[Win 10 版下载](/files/anyconnect-win-4.9.00086.msi)
 
->[Win XP 版下载](/files/winxp.msi)
+>[Win 7,8 版下载](/files/anyconnect-win-4.7.04056.msi)
 
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
 
