--- a/_posts/2018-03-20-ubuntu.md
+++ b/_posts/2018-03-20-ubuntu.md
@@ -44,6 +44,8 @@ sudo apt install network-manager-openconnect-gnome
 
 >in.fanq.in（印度/India）
 
+>it.fanq.in（意大利/Italy）
+
 >jp.fanq.in（日本/Japan）
 
 >kr.fanq.in（韩国/Korea）
