--- a/_posts/2018-08-02-如何安全使用（必读）.md
+++ b/_posts/2018-08-02-如何安全使用（必读）.md
@@ -7,7 +7,7 @@ categories:  VPN
 发表日期：2015-05-30
 更新日期：2020-03-18
 
-<!-- -------------
+-------------
 
 ## 安全问题与解答
 
@@ -67,7 +67,7 @@ categories:  VPN
 
 >那些被封以后无法应变的平台自然就会消失，所以选择平台很重要。
 
->总结，翻墙是技术层面的军备竞赛，十年品质保证您的在这场军备竞赛当中的优势地位。我们会一直守护您的信息安全。 -->
+>总结，翻墙是技术层面的军备竞赛，十年品质保证您的在这场军备竞赛当中的优势地位。我们会一直守护您的信息安全。
 
 -------------
 ## 思科 AnyConnect VPN 连接方法
