--- a/_posts/2018-01-20-windows.md
+++ b/_posts/2018-01-20-windows.md
@@ -45,6 +45,8 @@ categories:  Windows Anyconnect
 
 >in.fanq.in（印度/India）
 
+>it.fanq.in（意大利/Italy）
+
 >jp.fanq.in（日本/Japan）
 
 >kr.fanq.in（韩国/Korea）
