--- a/_posts/2018-03-19-ios.md
+++ b/_posts/2018-03-19-ios.md
@@ -22,8 +22,8 @@ categories:  IOS Anyconnect
 
 ****
 
-### 更换国外 AppleID
-
+<!--### 更换国外 AppleID
+-->
 ### 点击网站上 AnyConnect 栏目里面的 **苹果商店** 图标
 
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
