--- a/_posts/2018-01-20-windows.md
+++ b/_posts/2018-01-20-windows.md
@@ -15,9 +15,9 @@ categories:  Windows Anyconnect
 ****
 ### 软件下载
 
->[Win 10 版下载](/files/anyconnect-win-4.9.00086.msi)
+>[新版 Win 10 下载](/files/anyconnect-macos-4.10.01075.msi)
 
->[Win 7,8 版下载](/files/anyconnect-win-4.7.04056.msi)
+>[老版 Win 7,8 下载](/files/anyconnect-macos-4.7.04056.msi)
 
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
 
