--- a/_posts/2018-02-20-mac.md
+++ b/_posts/2018-02-20-mac.md
@@ -16,6 +16,13 @@ categories:  Mac Anyconnect
 
 ****
 
+### 软件下载
+
+>[新版 MacOS X (Big sur) 下载](/files/anyconnect-macos-4.10.01075.dmg)
+
+>[老版 MacOS X 下载](/files/anyconnect-macos-4.7.04056.dmg)
+
+
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
 
 >at.fanq.in（奥地利/Austria）
