--- a/_posts/2018-02-20-mac_txt.md
+++ b/_posts/2018-02-20-mac_txt.md
@@ -7,6 +7,12 @@ categories:  Mac Anyconnect
 
 ### 切换到[Mac 系统 **视频教程**](/2018/02/mac/ "Mac")
 
+### 软件下载
+
+>[新版 MacOS X (Big sur) 下载](/files/anyconnect-macos-4.10.01075.dmg)
+
+>[老版 MacOS X 下载](/files/anyconnect-macos-4.7.04056.dmg)
+
 ****
 
 ![mac](/assets/images/mac/mac1.png "Mac")
