--- a/_posts/2018-03-19-android.md
+++ b/_posts/2018-03-19-android.md
@@ -18,9 +18,9 @@ categories:  安卓 Anyconnect
 
 ### 软件下载
 
->[AnyConnect 下载](/files/cisco.anyconnect_4.8.03651.apk)
+>[AnyConnect 下载](/files/anyconnect-android-4.10.00102.apk)
 
->[OpenConnect 下载](/files/openconnext.apk)
+>[OpenConnect 下载](/files/openconnect.apk)
 
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
 
