--- a/_posts/2017-07-19-servers.md
+++ b/_posts/2017-07-19-servers.md
@@ -12,6 +12,8 @@ VIPIN 服务器列表
 
 ### 网页上点击旗帜，自动复制服务器地址到系统剪贴板
 
+>ar.fanq.in（阿根廷/Argentina）
+
 >at.fanq.in（奥地利/Austria）
 
 >au.fanq.in（澳大利亚/Australia）
@@ -36,29 +38,23 @@ VIPIN 服务器列表
 
 >in.fanq.in（印度/India）
 
+>it.fanq.in（意大利/Italy）
+
 >jp.fanq.in（日本/Japan）
 
 >kr.fanq.in（韩国/Korea）
 
->md.fanq.in（摩尔多瓦/Moldova）
-
 >nl.fanq.in（荷兰/Netherland）
+
+>nz.fanq.in（新西兰/New Zealand）
+
+>pk.fanq.in（巴基斯坦/Pakistan）
 
 >pt.fanq.in（葡萄牙/Portugal）
 
->ro.fanq.in（罗马尼亚/Romania）
-
 >ru.fanq.in（俄罗斯/Russia）
 
->sc.fanq.in（塞舌尔/Seychelles）
-
->se.fanq.in（瑞典/Sweden）
-
 >sg.fanq.in（新加坡/Singapore）
-
->th.fanq.in（泰国/Thailand）
-
->tw.fanq.in（台湾/Taiwan）
 
 >uk.fanq.in（英国/United Kingdom）
 
