--- a/_posts/2018-02-20-mac.md
+++ b/_posts/2018-02-20-mac.md
@@ -25,6 +25,8 @@ categories:  Mac Anyconnect
 
 ### 主页上点击旗帜，自动复制服务器地址到系统剪贴板
 
+>ar.fanq.in（阿根廷/Argentina）
+
 >at.fanq.in（奥地利/Austria）
 
 >au.fanq.in（澳大利亚/Australia）
@@ -55,25 +57,17 @@ categories:  Mac Anyconnect
 
 >kr.fanq.in（韩国/Korea）
 
->md.fanq.in（摩尔多瓦/Moldova）
-
 >nl.fanq.in（荷兰/Netherland）
+
+>nz.fanq.in（新西兰/New Zealand）
+
+>pk.fanq.in（巴基斯坦/Pakistan）
 
 >pt.fanq.in（葡萄牙/Portugal）
 
->ro.fanq.in（罗马尼亚/Romania）
-
 >ru.fanq.in（俄罗斯/Russia）
 
->sc.fanq.in（塞舌尔/Seychelles）
-
->se.fanq.in（瑞典/Sweden）
-
 >sg.fanq.in（新加坡/Singapore）
-
->th.fanq.in（泰国/Thailand）
-
->tw.fanq.in（台湾/Taiwan）
 
 >uk.fanq.in（英国/United Kingdom）
 
